# db-benchmark

./: .gitignore  .user.yml  benchmark.py  benchmark_report.md  dbt_project.yml  docker-compose.yml  generate_seeds.py  generate_seeds_wide.py  generate_wide_models.py  main.py  profiles.yml  pyproject.toml  starrocks_seed_debug.txt  starrocks_seed_error.txt
macros/: cross_db_utils.sql
models/marts/: rpt_extreme_cte.sql  rpt_extreme_join.sql  rpt_extreme_window.sql
models/staging/: fct_po.sql  fct_po_line.sql  fct_pr.sql  fct_pr_line.sql  fct_receipt.sql  fct_rfq.sql  stg_po.sql  stg_po_line.sql  stg_pr_line.sql  stg_receipt.sql  stg_rfq.sql  stg_wide_01.sql  stg_wide_02.sql  stg_wide_03.sql  stg_wide_04.sql  stg_wide_05.sql  stg_wide_06.sql  stg_wide_07.sql  stg_wide_08.sql  stg_wide_09.sql  stg_wide_10.sql
seeds/: dim_date_hour.csv  dim_item.csv  dim_supplier.csv  numbers_1000.csv
