[project]
name = "db-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-clickhouse>=1.10.0",
    "dbt-core>=1.11.6",
    "dbt-postgres>=1.10.0",
    "dbt-starrocks>=1.11.0",
    "psycopg2-binary>=2.9.11",
]
