[project]
name = "db-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-driver>=0.2.10",
    "dbt-clickhouse>=1.10.0",
    "dbt-core>=1.11.6",
    "dbt-postgres>=1.10.0",
    "dbt-starrocks>=1.11.0",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
]
